--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,6 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Mali:ital,wght@1,300&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap"
       rel="stylesheet"
     />
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
@@ -25,7 +27,49 @@
       src="https://kit.fontawesome.com/eefb64fc5b.js"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title>Front-end developer - Solomiia Sabat</title>
   </head>
-  <body></body>
+  <body>
+    <h2>Hello! I am</h2>
+    <h1>Solomiia Sabat</h1>
+    <h3>Front-end developer, based in Ukraine</h3>
+    <button type="button" class="contact-me">Contact me</button>
+    <img
+      src="images/solomiia.JPG"
+      alt="Solomiia-Sabat"
+      class="solomiia-photo"
+    />
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <img
+            src="images/weather-app.png"
+            alt="weather-app"
+            class="weather-app"
+          />
+        </div>
+        <div class="col-md-6">
+          <h2>Weather app</h2>
+          <h3>Built with HTML, CSS and JavaScript</h3>
+          <p>There will be text</p>
+          <button type="button" class="project-button weather-button">
+            Launch Weather App
+          </button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <img src="images/bike-polo.jpg" alt="bike-polo" class="bike-polo" />
+        </div>
+        <div class="col-md-6">
+          <h2>Bike Polo Page</h2>
+          <h3>Built with HTML, CSS and JavaScript</h3>
+          <p>There will be text</p>
+          <button type="button" class="project-button bike-button">
+            Launch Bike Polo Page
+          </button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
