added background colors + positioning

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,6 +22,7 @@
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="src/styles.css" />
     <script
       src="https://kit.fontawesome.com/eefb64fc5b.js"
       crossorigin="anonymous"
@@ -30,44 +30,56 @@
     <title>Front-end developer - Solomiia Sabat</title>
   </head>
   <body>
-    <h2>Hello! I am</h2>
-    <h1>Solomiia Sabat</h1>
-    <h3>Front-end developer, based in Ukraine</h3>
-    <button type="button" class="contact-me">Contact me</button>
-    <img
-      src="images/solomiia.JPG"
-      alt="Solomiia-Sabat"
-      class="solomiia-photo"
-    />
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <img
-            src="images/weather-app.png"
-            alt="weather-app"
-            class="weather-app"
-          />
+    <div class="general-content">
+      <div class="intro">
+        <div class="intro-text">
+          <h2>Hello! I am</h2>
+          <h1>Solomiia Sabat</h1>
+          <h3>Front-end developer, based in Ukraine</h3>
+          <button type="button" class="contact-me-button">Contact me</button>
         </div>
-        <div class="col-md-6">
-          <h2>Weather app</h2>
-          <h3>Built with HTML, CSS and JavaScript</h3>
-          <p>There will be text</p>
-          <button type="button" class="project-button weather-button">
-            Launch Weather App
-          </button>
-        </div>
+        <img
+          src="images/solomiia.JPG"
+          alt="Solomiia-Sabat"
+          class="solomiia-photo"
+        />
       </div>
-      <div class="row">
-        <div class="col-md-6">
-          <img src="images/bike-polo.jpg" alt="bike-polo" class="bike-polo" />
-        </div>
-        <div class="col-md-6">
-          <h2>Bike Polo Page</h2>
-          <h3>Built with HTML, CSS and JavaScript</h3>
-          <p>There will be text</p>
-          <button type="button" class="project-button bike-button">
-            Launch Bike Polo Page
-          </button>
+      <div class="main-part">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <img
+                src="images/weather-app.png"
+                alt="weather-app"
+                class="weather-app"
+              />
+            </div>
+            <div class="col-md-6">
+              <h2>Weather app</h2>
+              <h3>Built with HTML, CSS and JavaScript</h3>
+              <p>There will be text</p>
+              <button type="button" class="project-button weather-button">
+                Launch Weather App
+              </button>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <img
+                src="images/bike-polo.jpg"
+                alt="bike-polo"
+                class="bike-polo"
+              />
+            </div>
+            <div class="col-md-6">
+              <h2>Bike Polo Page</h2>
+              <h3>Built with HTML, CSS and JavaScript</h3>
+              <p>There will be text</p>
+              <button type="button" class="project-button bike-button">
+                Launch Bike Polo Page
+              </button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
