positioned main photo

--- a/index.html
+++ b/index.html
@@ -32,17 +32,25 @@
   <body>
     <div class="general-content">
       <div class="intro">
-        <div class="intro-text">
-          <h2>Hello! I am</h2>
-          <h1>Solomiia Sabat</h1>
-          <h3>Front-end developer, based in Ukraine</h3>
-          <button type="button" class="contact-me-button">Contact me</button>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 intro-text">
+              <h2>Hello! I am</h2>
+              <h1>Solomiia Sabat</h1>
+              <h3>Front-end developer, based in Ukraine</h3>
+              <button type="button" class="contact-me-button">
+                Contact me
+              </button>
+            </div>
+            <div class="col-md-6">
+              <img
+                src="images/solomiia.JPG"
+                alt="Solomiia-Sabat"
+                class="solomiia-photo"
+              />
+            </div>
+          </div>
         </div>
-        <img
-          src="images/solomiia.JPG"
-          alt="Solomiia-Sabat"
-          class="solomiia-photo"
-        />
       </div>
       <div class="main-part">
         <div class="container">
