finished mail-button

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
               <h1>Solomiia Sabat</h1>
               <h3>Front-end developer, based in Ukraine</h3>
               <button type="button" class="contact-me-button">
-                Contact me
+                <a href="mailto:solomiyasabat@gmail.com" class="my-mail">
+                  Contact me
+                </a>
               </button>
             </div>
             <div class="col-md-6">
