styled contact me and home pages

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="general-content">
       <div class="intro">
         <div class="container">
-          <div class="row">
+          <div class="row ps-4">
             <div class="col-md-6 intro-text">
               <h2>Hello! I am</h2>
               <h1>Solomiia Sabat</h1>
@@ -56,7 +56,7 @@
       </div>
       <div class="main-part">
         <div class="container">
-          <div class="row">
+          <div class="row pt-5 ps-4">
             <div class="col-md-6">
               <img
                 src="images/weather-app.png"
@@ -64,16 +64,21 @@
                 class="weather-app"
               />
             </div>
-            <div class="col-md-6">
-              <h2>Weather app</h2>
+            <div class="col-md-6 pt-1">
+              <h2>Weather App</h2>
               <h3>Built with HTML, CSS and JavaScript</h3>
               <p>There will be text</p>
               <button type="button" class="project-button weather-button">
-                Launch Weather App
+                <a
+                  href="https://singular-kringle-b3246c.netlify.app/"
+                  class="weather-app-link"
+                  target="_blank"
+                  >Launch Weather App</a
+                >
               </button>
             </div>
           </div>
-          <div class="row">
+          <div class="row pt-4 pb-4 ps-4">
             <div class="col-md-6">
               <img
                 src="images/bike-polo.jpg"
@@ -81,12 +86,17 @@
                 class="bike-polo"
               />
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 pt-1">
               <h2>Bike Polo Page</h2>
               <h3>Built with HTML, CSS and JavaScript</h3>
               <p>There will be text</p>
               <button type="button" class="project-button bike-button">
-                Launch Bike Polo Page
+                <a
+                  href="https://funny-alfajores-909d76.netlify.app/"
+                  class="bike-polo-link"
+                  target="_blank"
+                  >Launch Bike Polo Page</a
+                >
               </button>
             </div>
           </div>
