--- a/contact-me.html
+++ b/contact-me.html
@@ -28,8 +28,39 @@
     ></script>
     <title>Contact Me - Solomiia Sabat</title>
   </head>
-  <body class="intro">
-    <div class="general-content contact-me-general container">
+  <body class="intro general-content">
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand ms-4" href="#">Solomiia Sabat</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about-me.html">About me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="contact-me.html#mail"
+                >Contact me</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="contact-me-general container">
       <h1>Contact me</h1>
       <h3>
         <a href="mailto:solomiyasabat@gmail.com" class="contact-mail pt-3"
