--- a/about-me.html
+++ b/about-me.html
@@ -16,7 +16,6 @@
       href="https://fonts.googleapis.com/css2?family=Mali:ital,wght@1,300&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="src/styles.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
@@ -26,10 +25,40 @@
       src="https://kit.fontawesome.com/eefb64fc5b.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="src/styles.css" />
     <title>About me page - Solomiia Sabat</title>
   </head>
-  <body class="intro">
-    <div class="general-content container">
+  <body class="intro general-content">
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand ms-4" href="#">Solomiia Sabat</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="about-me.html">About me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact-me.html#mail">Contact me</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container about-me-body">
       <h1 class="text-center pt-4">About me</h1>
       <ul class="timeline">
         <!-- Item 1 -->
@@ -75,6 +104,22 @@
             <div class="desc">
               A description of all the lectures and courses I have taken and my
               final degree?
+            </div>
+          </div>
+        </li>
+
+        <!-- Item 4 -->
+        <li>
+          <div class="direction-l">
+            <div class="flag-wrapper">
+              <span class="flag">Apple Inc.</span>
+              <span class="time-wrapper"
+                ><span class="time">2011 - 2013</span></span
+              >
+            </div>
+            <div class="desc">
+              My first employer. All the stuff I've learned and projects I've
+              been working on.
             </div>
           </div>
         </li>
