--- a/index.html
+++ b/index.html
@@ -31,6 +31,35 @@
   </head>
   <body>
     <div class="general-content">
+      <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand ms-4" href="#">Solomiia Sabat</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about-me.html">About me</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact-me.html#mail">Contact me</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
       <div class="intro">
         <div class="container">
           <div class="row ps-4">
