wrote description for about-me page

--- a/about-me.html
+++ b/about-me.html
@@ -65,13 +65,14 @@
         <li>
           <div class="direction-r">
             <div class="flag-wrapper">
-              <span class="flag">Freelancer</span>
+              <span class="flag">Student</span>
               <span class="time-wrapper"
-                ><span class="time">2013 - present</span></span
+                ><span class="time">2017 - 2021</span></span
               >
             </div>
             <div class="desc">
-              My current employment. Way better than the position before!
+              Studied International Communications at Kyiv National University
+              of Kyiv
             </div>
           </div>
         </li>
@@ -80,14 +81,13 @@
         <li>
           <div class="direction-l">
             <div class="flag-wrapper">
-              <span class="flag">Apple Inc.</span>
+              <span class="flag">Plai Büro</span>
               <span class="time-wrapper"
-                ><span class="time">2011 - 2013</span></span
+                ><span class="time">2020 - 2022</span></span
               >
             </div>
             <div class="desc">
-              My first employer. All the stuff I've learned and projects I've
-              been working on.
+              My first employer. I worked there as a Creative Copywriter.
             </div>
           </div>
         </li>
@@ -96,14 +96,13 @@
         <li>
           <div class="direction-r">
             <div class="flag-wrapper">
-              <span class="flag">Harvard University</span>
+              <span class="flag">SheCodes</span>
               <span class="time-wrapper"
-                ><span class="time">2008 - 2011</span></span
+                ><span class="time">May-August 2022</span></span
               >
             </div>
             <div class="desc">
-              A description of all the lectures and courses I have taken and my
-              final degree?
+              Online courses for women who want to become front-end developers
             </div>
           </div>
         </li>
@@ -112,14 +111,12 @@
         <li>
           <div class="direction-l">
             <div class="flag-wrapper">
-              <span class="flag">Apple Inc.</span>
-              <span class="time-wrapper"
-                ><span class="time">2011 - 2013</span></span
-              >
+              <span class="flag">Looking for internship</span>
+              <span class="time-wrapper"><span class="time">2022</span></span>
             </div>
             <div class="desc">
-              My first employer. All the stuff I've learned and projects I've
-              been working on.
+              With the knowledges of HTML, CSS & JavaScript I am looking for
+              trainee position
             </div>
           </div>
         </li>
